<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BGsideMainPage"
    tools:context=".loginPage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="620dp"
        android:layout_margin="15dp"
        android:padding="15dp">


        <ImageView
            android:id="@+id/logoLoginPage"
            android:layout_width="207dp"
            android:layout_height="237dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="95dp"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="95dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="269dp"
            android:layout_height="121dp"
            android:layout_below="@+id/logoLoginPage"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="51dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="47dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="15dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/buttonLogin"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="15dp"
            android:text="@string/register" />

    </RelativeLayout>

</ScrollView>