<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemPageBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BGsideMainPage"
    tools:context=".itemPage">


    <ImageView
        android:id="@+id/itemPageImage"
        android:layout_width="419dp"
        android:layout_height="281dp"
        android:contentDescription="@string/appname"
        android:scaleType="centerCrop"
        android:transitionName="itemImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/poor_things" />

    <TextView
        android:id="@+id/itemPageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/appname"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPageImage" />

    <androidx.cardview.widget.CardView
        android:id="@+id/itemBg"
        android:layout_width="366dp"
        android:layout_height="176dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/itemPageText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/itemPageDescroption"
                    android:layout_width="346dp"
                    android:layout_height="133dp"
                    android:layout_margin="10sp"
                    android:text="@string/appname"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/addTicket"
        android:layout_width="274dp"
        android:layout_height="120dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/appname"
        android:onClick="addToCart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemBg"
        app:layout_constraintVertical_bias="0.405"
        app:srcCompat="@drawable/t1" />

    <TextView
        android:id="@+id/itemParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:text="@string/appname"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/itemParticipantsText"
        app:layout_constraintTop_toBottomOf="@+id/itemPageText" />

    <TextView
        android:id="@+id/itemParticipantsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="10dp"
        android:text="@string/participants"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPageText" />

    <TextView
        android:id="@+id/itemDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="10dp"
        android:text="@string/date"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemParticipantsText" />

    <TextView
        android:id="@+id/itemRD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:text="@string/appname"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/itemDateText"
        app:layout_constraintTop_toBottomOf="@+id/itemParticipants" />

</androidx.constraintlayout.widget.ConstraintLayout>